<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/menu_margin_end"
    android:paddingStart="@dimen/menu_margin_start">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:background="@color/abu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/culinary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/menu_margin_bottom"
        android:layout_marginTop="@dimen/home_menu_margin_top"
        android:background="@drawable/menu_border"
        android:drawablePadding="24dp"
        android:drawableStart="@drawable/selector_culinnary"
        android:fontFamily="@font/lato_light"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:text="@string/culinary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/craft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/craft"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/menu_margin_bottom"
        android:background="@drawable/menu_border"
        android:drawablePadding="24dp"
        android:drawableStart="@drawable/selectorcraft"
        android:fontFamily="@font/lato_light"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:text="@string/craft"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/events"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/culinary" />

    <TextView
        android:id="@+id/events"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/menu_margin_bottom"
        android:background="@drawable/menu_border"
        android:drawablePadding="24dp"
        android:drawableStart="@drawable/selectorevent"
        android:fontFamily="@font/lato_light"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:text="@string/events"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/nativeLanguage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/craft" />

    <TextView
        android:id="@+id/nativeLanguage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/home_menu_margin_top"
        android:background="@drawable/menu_border"
        android:drawablePadding="24dp"
        android:drawableStart="@drawable/selectornative"
        android:fontFamily="@font/lato_light"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:text="@string/native_language"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/events" />


</android.support.constraint.ConstraintLayout>